--- a/client/index.html
+++ b/client/index.html
@@ -13,13 +13,13 @@
 
     <title>Document</title>
 </head>
-
+// https://www.omdbapi.com/
 <body>
     <!-- HEADER -->
     <header>
         <div id="logo">
             
-            <img src="logo.webp" alt="TVReviewRiot Logo">
+            <img src="./public/logo.png" alt="TVReviewRiot Logo">
         </div>
         <h1 id="SG">TVReviewRiot</h1>
         <nav>
