--- a/client/index.html
+++ b/client/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- JS -->
     <script src="./assets/js/app.js" defer type="module"></script>
 
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- HEADER -->
     <header>
-        <nav>
-
-        </nav>
+      <nav></nav>
     </header>
 
     <!-- MAIN -->
-    <main>
-
-    </main>
+    <main></main>
 
     <!-- FOOTER -->
-    <footer>
-
-    </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
