--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
   <!-- CSS -->
   <link rel="Stylesheet" href="style.css" />
-
+  <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
   <!-- JS -->
   <script src="./networkHandler.js" defer type="module"></script>
   <script src="./app.js" defer type="module"></script>
@@ -47,15 +47,17 @@
     <!-- RECENTLY ADDED  -->
     <section class="container-background">
       <h1>Recently Added</h1>
-      <div class="display">
+      <div class="display glide">
         <button class="prev-btn">&lt;</button>
-        <div class="gallery-images">
-          <img src="aot.webp" alt="Attack on Titan" />
-          <img src="bluey.webp" alt="Bluey" />
-          <img src="cowboy.webp" alt="Image 6" />
-          <img src="Dr who.webp">
-          <img src="fallout.webp">
-          <img src="Red Dwarf.webp">
+        <div data-glide-el="track" class="gallery-images glide__track">
+          <ul class="glide__slides">
+            <li class="glide__slide"><img src="aot.webp" alt="Attack on Titan" /></li>
+            <li class="glide__slide"> <img src="bluey.webp" alt="Bluey" /></li>
+            <li class="glide__slide"><img src="cowboy.webp" alt="Image 6" /></li>
+            <li class="glide__slide"><img src="Dr who.webp"></li>
+            <li class="glide__slide"> <img src="fallout.webp"></li>
+            <li class="glide__slide"> <img src="Red Dwarf.webp"></li>
+          </ul>
         </div>
         <button class="next-btn">&gt;</button>
       </div>
