--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,9 @@
   <!-- CSS -->
   <link rel="Stylesheet" href="style.css" />
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
+
   <!-- JS -->
+  <script src="./galleryBuilder.js" defer type="module"></script>
   <script src="./networkHandler.js" defer type="module"></script>
   <script src="./app.js" defer type="module"></script>
 
@@ -50,13 +52,15 @@
       <div class="display glide">
         <button class="prev-btn">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
-          <ul class="glide__slides">
+          <ul id="recently-added" class="glide__slides">
+            <!--
             <li class="glide__slide"><img src="aot.webp" alt="Attack on Titan" /></li>
             <li class="glide__slide"> <img src="bluey.webp" alt="Bluey" /></li>
             <li class="glide__slide"><img src="cowboy.webp" alt="Image 6" /></li>
-            <li class="glide__slide"><img src="Dr who.webp"></li>
+            <li class="glide__slide"><img src="Drwho.webp"></li>
             <li class="glide__slide"> <img src="fallout.webp"></li>
-            <li class="glide__slide"> <img src="Red Dwarf.webp"></li>
+            <li class="glide__slide"> <img src="RedDwarf.webp"></li>
+            -->
           </ul>
         </div>
         <button class="next-btn">&gt;</button>
