All carousels work with glide.js

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,6 @@
   <title>TvReviewRiot</title>
 </head>
 
-
 <body>
   <!-- HEADER -->
   <header>
@@ -28,16 +27,16 @@
       <img src="logo.png" id="logo" alt="TVReviewRiot Logo" />
     </div>
     <div id="title">
-    <h1 class="h1">TVReviewRiot</h1>
-    <h2 class="h2">Everyones a Critic, Now its your turn</h2>
-  </div>
-  
+      <h1 class="h1">TVReviewRiot</h1>
+      <h2 class="h2">Everyones a Critic, Now its your turn</h2>
+    </div>
+
     <nav>
-      <a id="a1" href="#Home">Home</a>
-      <a id="a2" href="./page">About</a>
-      <a id="a3" href="#Latest Releases">Latest Release</a>
-      <a id="a4" href="#Recent Reviews">Recent Reviews</a>
-      <a id="a5" href="#Live Rankings">Live Rankings</a>
+      <a href="#Home">Home</a>
+      <a href="#About">About</a>
+      <a href="#Latest Releases">Latest Release</a>
+      <a href="#Recent Reviews">Recent Reviews</a>
+      <a href="#Live Rankings">Live Rankings</a>
       <div class="search-container">
         <input type="text" placeholder="Search..." id="search-bar">
         <button type="submit" id="search-button"><i class="fa fa-search"></i></button>
@@ -48,65 +47,56 @@
   <!-- MAIN -->
   <main>
 
-    
     <section class="container-background">
       <h1>Recently Added</h1>
-      <div class="display glide">
+      <div class="display recently-added-glide">
         <button class="prev-btn">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
           <ul id="recently-added" class="glide__slides">
-            <!--
-            <li class="glide__slide"><img src="aot.webp" alt="Attack on Titan" /></li>
-            <li class="glide__slide"> <img src="bluey.webp" alt="Bluey" /></li>
-            <li class="glide__slide"><img src="cowboy.webp" alt="Image 6" /></li>
-            <li class="glide__slide"><img src="Drwho.webp"></li>
-            <li class="glide__slide"> <img src="fallout.webp"></li>
-            <li class="glide__slide"> <img src="RedDwarf.webp"></li>
-            -->
           </ul>
         </div>
         <button class="next-btn">&gt;</button>
       </div>
     </section>
+
     <section class="advert container-background">
       <img src="mac-mall-1998.gif" />
     </section>
+
     <!-- RECENT REVIEWS  -->
     <section class="container-background">
-      <div>
-        <h1>Recent Reviews</h1>
-        <div class="display">
-          <button class="prev-btn">&lt;</button>
-          <div class="gallery-images">
-            <img href="page.html" src="3bp.jpg" alt="Image 4" />
-            <img src="fallout.jpg" alt="Image 5" />
-            <img src="lou.jpg" alt="Image 6" />
-          </div>
-          <button class="next-btn">&gt;</button>
+      <h1>Recent Reviews</h1>
+      <div class="display recent-review-glide">
+        <button class="prev-btn">&lt;</button>
+        <div data-glide-el="track" class="gallery-images glide__track">
+          <ul id="recent-reviews" class="glide__slides">
+          </ul>
         </div>
+        <button class="next-btn">&gt;</button>
       </div>
     </section>
+
     <section class="advert container-background">
       <img src="pizza-hut-1998.gif" />
     </section>
 
     <!-- LIVE RANKINGS  -->
     <section class="container-background">
-      <div>
-        <h1>Live Rankings</h1>
-        <div class="display">
-          <button class="prev-btn">&lt;</button>
-          <div class="gallery-images">
-            <img src="3bp.jpg" alt="Image 4" />
-            <img src="fallout.jpg" alt="Image 5" />
-            <img src="lou.jpg" alt="Image 6" />
-          </div>
-          <button class="next-btn">&gt;</button>
+      <h1>Live Rankings</h1>
+      <div class="display live-ranking-glide">
+        <button class="prev-btn">&lt;</button>
+        <div data-glide-el="track" class="gallery-images glide__track">
+          <ul id="live-rankings" class="glide__slides">
+          </ul>
         </div>
+        <button class="next-btn">&gt;</button>
+      </div>
     </section>
+
     <section class="advert container-background">
       <img src="amazon-2000.gif" />
     </section>
+
     </div>
   </main>
 
