--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,10 @@
   <!-- Shut up Favicon -->
   <link rel="shortcut icon" href="#">
 
-  <!-- CSS -->
+  <!-- CSS Custom-->
   <link rel="Stylesheet" href="style.css" />
+
+  <!--CSS: Glide.js-->
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
 
   <!-- JS -->
