--- a/client/index.html
+++ b/client/index.html
@@ -25,14 +25,14 @@
   <!-- HEADER -->
   <header>
     <div id="logo">
-      <img src="logo.png" id="logo" alt="TVReviewRiot Logo" />
+      <img src="logo.png" id="logo" alt="TVReviewRiot Logo" aria-label="TVReviewRiot Logo"/>
     </div>
     <div id="title">
     <h1 class="h1">TVReviewRiot</h1>
     <h2 class="h2">Everyones a Critic, Now its your turn</h2>
   </div>
   
-    <nav>
+    <nav role="navigation">
       <a id="a1" href="#Home">Home</a>
       <a id="a2" href="./page">About</a>
       <a id="a3" href="#Latest Releases">Latest Release</a>
@@ -52,7 +52,7 @@
     <section class="container-background">
       <h1>Recently Added</h1>
       <div class="display glide">
-        <button class="prev-btn">&lt;</button>
+        <button class="prev-btn" aria-label="Move carousel back">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
           <ul id="recently-added" class="glide__slides">
             <!--
@@ -65,7 +65,7 @@
             -->
           </ul>
         </div>
-        <button class="next-btn">&gt;</button>
+        <button class="next-btn" aria-label="Move carousel on">&gt;</button>
       </div>
     </section>
     <section class="advert container-background">
@@ -76,13 +76,13 @@
       <div>
         <h1>Recent Reviews</h1>
         <div class="display">
-          <button class="prev-btn">&lt;</button>
+          <button class="prev-btn" aria-label="Move carousel back">&lt;</button>
           <div class="gallery-images">
             <img href="page.html" src="3bp.jpg" alt="Image 4" />
             <img src="fallout.jpg" alt="Image 5" />
             <img src="lou.jpg" alt="Image 6" />
           </div>
-          <button class="next-btn">&gt;</button>
+          <button class="next-btn" aria-label="Move carousel on">&gt;</button>
         </div>
       </div>
     </section>
@@ -95,13 +95,13 @@
       <div>
         <h1>Live Rankings</h1>
         <div class="display">
-          <button class="prev-btn">&lt;</button>
+          <button class="prev-btn" aria-label="Move carousel back">&lt;</button>
           <div class="gallery-images">
             <img src="3bp.jpg" alt="Image 4" />
             <img src="fallout.jpg" alt="Image 5" />
             <img src="lou.jpg" alt="Image 6" />
           </div>
-          <button class="next-btn">&gt;</button>
+          <button class="next-btn" aria-label="Move carousel on">&gt;</button>
         </div>
     </section>
     <section class="advert container-background">
