Carousels given purpose in life
Live Ranking now organizes by most likes descending.
Recent Reviews now only show TV shows with reviews.

--- a/client/index.html
+++ b/client/index.html
@@ -71,7 +71,7 @@
       <div class="display recent-review-glide">
         <button class="prev-btn">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
-          <ul id="recent-reviews" class="glide__slides">
+          <ul id="recent-review" class="glide__slides">
           </ul>
         </div>
         <button class="next-btn">&gt;</button>
@@ -88,7 +88,7 @@
       <div class="display live-ranking-glide">
         <button class="prev-btn">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
-          <ul id="live-rankings" class="glide__slides">
+          <ul id="live-ranking" class="glide__slides">
           </ul>
         </div>
         <button class="next-btn">&gt;</button>
