Cleaned up style a bit

--- a/client/index.html
+++ b/client/index.html
@@ -15,22 +15,23 @@
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
 
   <!-- JS -->
+  <script src="./showCloseUp.js" defer type="module"></script>
   <script src="./galleryBuilder.js" defer type="module"></script>
   <script src="./networkHandler.js" defer type="module"></script>
   <script src="./app.js" defer type="module"></script>
 
-  <title>TvReviewRiot</title>
+  <title>TV Review Riot</title>
 </head>
 
 <body>
   <!-- HEADER -->
   <header>
-    <div id="logo">
+    <div>
       <img src="logo.png" id="logo" alt="TVReviewRiot Logo" />
     </div>
     <div id="title">
-      <h1 class="h1">TVReviewRiot</h1>
-      <h2 class="h2">Everyones a Critic, Now its your turn</h2>
+      <h1 class="h1">TV Review Riot</h1>
+      <h2 class="h2">Everyones a Critic; now its your turn!</h2>
     </div>
 
     <nav>
@@ -49,7 +50,7 @@
   <!-- MAIN -->
   <main>
 
-    <section class="container-background">
+    <section class="h1-container">
       <h1>Recently Added</h1>
       <div class="display recently-added-glide">
         <button class="prev-btn">&lt;</button>
@@ -61,12 +62,12 @@
       </div>
     </section>
 
-    <section class="advert container-background">
+    <section class="advert h1-container">
       <img src="mac-mall-1998.gif" />
     </section>
 
     <!-- RECENT REVIEWS  -->
-    <section class="container-background">
+    <section class="h1-container">
       <h1>Recent Reviews</h1>
       <div class="display recent-review-glide">
         <button class="prev-btn">&lt;</button>
@@ -78,12 +79,12 @@
       </div>
     </section>
 
-    <section class="advert container-background">
+    <section class="advert h1-container">
       <img src="pizza-hut-1998.gif" />
     </section>
 
     <!-- LIVE RANKINGS  -->
-    <section class="container-background">
+    <section class="h1-container">
       <h1>Live Rankings</h1>
       <div class="display live-ranking-glide">
         <button class="prev-btn">&lt;</button>
@@ -95,7 +96,7 @@
       </div>
     </section>
 
-    <section class="advert container-background">
+    <section class="advert h1-container">
       <img src="amazon-2000.gif" />
     </section>
 
