--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
 
   <!-- JS -->
-  <script src="./showCloseUp.js" defer type="module"></script>
+  <script src="./showCloseup.js" defer type="module"></script>
   <script src="./galleryBuilder.js" defer type="module"></script>
   <script src="./networkHandler.js" defer type="module"></script>
   <script src="./app.js" defer type="module"></script>
