buttons are hooked in

--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
   <main>
     <section class="h1-container">
       <h1>Recently Added</h1>
-      <div class="display recently-added-glide">
+      <div class="display" id="recently-added-glide">
         <button class="prev-btn">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
           <ul id="recently-added" class="glide__slides">
@@ -67,7 +67,7 @@
     <!-- RECENT REVIEWS  -->
     <section class="h1-container">
       <h1>Recent Reviews</h1>
-      <div class="display recent-review-glide">
+      <div class="display" id="recent-review-glide">
         <button class="prev-btn">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
           <ul id="recent-review" class="glide__slides">
@@ -84,7 +84,7 @@
     <!-- LIVE RANKINGS  -->
     <section class="h1-container">
       <h1>Live Rankings</h1>
-      <div class="display live-ranking-glide">
+      <div class="display" id="live-ranking-glide">
         <button class="prev-btn">&lt;</button>
         <div data-glide-el="track" class="gallery-images glide__track">
           <ul id="live-ranking" class="glide__slides">
