--- a/client/closeup.html
+++ b/client/closeup.html
@@ -20,6 +20,12 @@
             <span id="closeup-desc">Doctor Who is pretty darn cool.</span>
         </div>
     </div>
+
+    <div id="review-div">
+        <ul id="review-list">
+
+        </ul>
+    </div>
 </body>
 
 </html>
